objects/Audit_Score_Card__c.object
<CustomObject>
    <description>Audit Score Cards</description>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Formula</description>
        <inlineHelpText>Formula</inlineHelpText>
        <label>Formula</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrdGrp10__c</fullName>
        <description>Product Group 10 Count</description>
        <inlineHelpText>Product Group 10 Count</inlineHelpText>
        <label>PrdGrp10</label>
        <summarizedField>CountryScoreCard__c.PrdGrp10__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Audit_Score_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrdGrp1__c</fullName>
        <description>Product Group 1 Count</description>
        <inlineHelpText>Product Group 1 Count</inlineHelpText>
        <label>PrdGrp1</label>
        <summarizedField>CountryScoreCard__c.PrdGrp1__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Audit_Score_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrdGrp2__c</fullName>
        <description>Product Group 2 Count</description>
        <inlineHelpText>Product Group 2 Count</inlineHelpText>
        <label>PrdGrp2</label>
        <summarizedField>CountryScoreCard__c.PrdGrp2__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Audit_Score_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Group_10__c</fullName>
        <description>Product Group 10</description>
        <inlineHelpText>Product Group 10</inlineHelpText>
        <label>Product Group 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <description>Product Group 1</description>
        <inlineHelpText>Product Group 1</inlineHelpText>
        <label>Product Group 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <description>Product Group 2</description>
        <inlineHelpText>Product Group 2</inlineHelpText>
        <label>Product Group 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Group_Sequence__c</fullName>
        <description>Report Group Sequence</description>
        <inlineHelpText>Report Group Sequence</inlineHelpText>
        <label>Report Group Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Sequence__c</fullName>
        <description>Report Sequence</description>
        <inlineHelpText>Report Sequence</inlineHelpText>
        <label>Report Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score_Card_No__c</fullName>
        <description>Score Card Number</description>
        <displayFormat>SC-{00000}</displayFormat>
        <inlineHelpText>Score Card Number</inlineHelpText>
        <label>Score Card Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Audit Score Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Score_Card_No__c</columns>
        <columns>NAME</columns>
        <columns>Report_Group_Sequence__c</columns>
        <columns>Report_Sequence__c</columns>
        <columns>Formula__c</columns>
        <columns>Product_Group_1__c</columns>
        <columns>Product_Group_2__c</columns>
        <columns>Product_Group_3__c</columns>
        <columns>Product_Group_4__c</columns>
        <columns>Product_Group_5__c</columns>
        <columns>Product_Group_6__c</columns>
        <columns>Product_Group_7__c</columns>
        <columns>Product_Group_8__c</columns>
        <columns>Product_Group_9__c</columns>
        <columns>Product_Group_10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Score Cared</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Score Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>